--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/* styles.css */
+.custom-toolbar {
+    background-color: #22fffb; /* Remplacez ceci par la couleur de votre choix */
+}
